Implementando um controle personalizado

--- a/CBL Interfaces/FoodTracker/FoodTracker/Base.lproj/Main.storyboard
+++ b/CBL Interfaces/FoodTracker/FoodTracker/Base.lproj/Main.storyboard
@@ -15,11 +15,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="sx8-Cs-h43">
-                                <rect key="frame" x="10" y="19.999999999999972" width="394" height="502.33333333333326"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="sx8-Cs-h43">
+                                <rect key="frame" x="10" y="20" width="394" height="516.33333333333337"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Meal Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fhL-Iz-k8J">
-                                        <rect key="frame" x="0.0" y="0.0" width="86.333333333333329" height="20.333333333333332"/>
+                                        <rect key="frame" x="154" y="0.0" width="86.333333333333314" height="20.333333333333332"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -29,15 +29,8 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
                                     </textField>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pqT-XM-4tc">
-                                        <rect key="frame" x="0.0" y="70.333333333333329" width="155" height="30"/>
-                                        <state key="normal" title="Set Default Label Text."/>
-                                        <connections>
-                                            <action selector="setDefaultLabelText:" destination="BYZ-38-t0r" eventType="touchUpInside" id="srA-5b-WBH"/>
-                                        </connections>
-                                    </button>
                                     <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="default Images" translatesAutoresizingMaskIntoConstraints="NO" id="8wU-Ch-vgY">
-                                        <rect key="frame" x="0.0" y="108.33333333333337" width="394" height="394"/>
+                                        <rect key="frame" x="0.0" y="70.333333333333314" width="394" height="394"/>
                                         <gestureRecognizers/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="8wU-Ch-vgY" secondAttribute="height" multiplier="1:1" id="wnD-NN-6r2"/>
@@ -46,6 +39,9 @@
                                             <outletCollection property="gestureRecognizers" destination="TSH-zI-oGh" appends="YES" id="nQb-jv-fdG"/>
                                         </connections>
                                     </imageView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Kyl-eF-vQq" customClass="RatingControl" customModule="FoodTracker" customModuleProvider="target">
+                                        <rect key="frame" x="71" y="472.33333333333331" width="252" height="43.999999999999943"/>
+                                    </stackView>
                                 </subviews>
                                 <gestureRecognizers/>
                                 <constraints>
@@ -65,6 +61,7 @@
                         <outlet property="mealNameLabel" destination="fhL-Iz-k8J" id="oEM-8Q-k8G"/>
                         <outlet property="nameTextField" destination="WHz-Uf-7mx" id="43t-27-2jA"/>
                         <outlet property="photoImageView" destination="8wU-Ch-vgY" id="YVB-xK-rF7"/>
+                        <outlet property="ratingControl" destination="Kyl-eF-vQq" id="mVF-1a-mb6"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
